--- a/emoji_switch/index.html
+++ b/emoji_switch/index.html
@@ -8,10 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-        <h2>Emoji swtch</h2>
+        <h2>Click to view the message</h2>
     
-    <div class="emoji close active">🙈</div>
-    <div class="emoji open">🙉</div>
+        <img class="emoji close active" src="miranda.jpg" alt="" srcset="">
+    <!-- <div class="emoji close active">🙈</div> -->
+        <img class="emoji open" src="letter.jpg" alt="" srcset="">
+    <!-- <div class="emoji open">🙉</div> -->
     
 </body>
 <script src="index.js"></script>
