--- a/create_slide/index.html
+++ b/create_slide/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <span class="slide-image-number"><h1>Slide through the images</h1></span>
+    <span class="slide-image-number">
+        <h1>Slide through the images</h1>
+    </span>
 
     <p>
-                <br>
+        <br>
         <img class="slide-image" src="" alt="">
 
     </p>
 
 
-    <div class="btn backward" >
+    <div class="btn backward">
         <span class="material-icons-outline" onclick="nextImage()">Move to the right</span>
     </div>
 
     <div class="btn forward">
-        <span class="material-icons-outline" onclick="prevImage()">Move to the  left</span>
+        <span class="material-icons-outline" onclick="prevImage()">Move to the left</span>
     </div>
+
+    <h3 class="alerting" id="alerting" style="color: red;">
+
+    </h3>
 
     <div class="container2">
         <h1>Insert your own picture</h1>
-        <input type="text" name="picture1" id="picture1">
-        <button class="insert" onclick="push_images()"><h3>Add image</h3></button>
-        <!-- <button class="delete" onclick="remove_picture()"><h3>Remove image</h3></button>
-        <button class="show_list" onclick="show_list()" >Show all pictures</button> -->
+        <input type="text" name="picture1" id="picture2">
+        <button class="insert" onclick="push_images()">
+            <h3>Add image</h3>
+        </button>
+
+
+        <!-- <button class="delete" onclick="remove_picture()"><h3>Remove image</h3></button> -->
+
+        <!-- <button class="show_list" onclick="show_list()" >Show all pictures</button> --> -->
 
 
     </div>
-    
+
     <div class="list">
 
     </div>
-  
+
 </body>
 <script src="main.js"></script>
+
 </html>
