--- a/create_slide/index.html
+++ b/create_slide/index.html
@@ -43,9 +43,9 @@
         </button>
 
 
-        <!-- <button class="delete" onclick="remove_picture()"><h3>Remove image</h3></button> -->
+        <button class="delete" onclick="remove_picture()"><h3>Remove image</h3></button>
 
-        <!-- <button class="show_list" onclick="show_list()" >Show all pictures</button> --> -->
+        <!-- <button class="show_list" onclick="show_list()" >Show all pictures</button> --> 
 
 
     </div>
